# homework_06

./: ali  aligned_program
ToLearn/aligned/: ali  main.cpp
ToLearn/allocator/src/: allocator  main.cpp
ToLearn/perfect_pointer/: .gitignore  CMakeLists.txt  Makefile  main.cpp  student.hpp  utils.hpp
code/: CMakeLists.txt  omp_reduce.hpp  omp_saxpy.hpp  omp_triad.hpp
code/include/: allocator_adaptor.hpp  benchmarker.hpp  numa_extensions.hpp  utilities.hpp
code/scripts/: ex06SlurmScript.sh  load_env_CPUAD.sh  plotRes.py
code/src/: omp_reduce_bench.cpp  omp_reduce_main.cpp  omp_saxpy_bench.cpp  omp_transform_main.cpp  omp_triad_bench.cpp
